--- a/ingestion-service/build.gradle
+++ b/ingestion-service/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     
     // GTFS Realtime
-    implementation "com.google.transit:gtfs-realtime-bindings:${gtfsRealtimeBindingsVersion}"
+    implementation "com.google.transit:gtfs-realtime-bindings:0.0.4"
     implementation 'com.google.protobuf:protobuf-java:3.25.1'
     
     // HTTP Client
