Fix Gradle wrapper for GitHub Actions
- Add gradle-wrapper.jar to repository (was being ignored by *.jar rule)
- Update .gitignore to properly exclude JARs but allow gradle wrapper
- Add build.sh script for local development with Java 21

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,13 @@ build/
 # Java
 *.class
 *.log
-*.jar
 *.war
 *.ear
 hs_err_pid*
+
+# JAR files (but allow gradle wrapper)
+*.jar
+!gradle/wrapper/gradle-wrapper.jar
 
 # IDE
 .idea/
