--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,17 +172,34 @@ jobs:
     
     - name: Build Docker images
       run: ./gradlew bootBuildImage --no-daemon
+
+    - name: List built images
+      run: docker images
+    
+    - name: Tag images for Docker Hub
+      if: github.event_name == 'push' && secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != ''
+      run: |
+        docker tag ingestion-service:latest routeforge/ingestion-service:latest
+        docker tag processing-service:latest routeforge/processing-service:latest
+        docker tag api-gateway-service:latest routeforge/api-gateway-service:latest
     
     - name: Log in to Docker Hub
-      if: github.event_name == 'push'
+      if: github.event_name == 'push' && secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != ''
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Push images
-      if: github.event_name == 'push'
+      if: github.event_name == 'push' && secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != ''
       run: |
         docker push routeforge/ingestion-service:latest
         docker push routeforge/processing-service:latest
         docker push routeforge/api-gateway-service:latest
+
+    - name: Docker build completed
+      if: github.event_name == 'push' && (secrets.DOCKER_USERNAME == '' || secrets.DOCKER_PASSWORD == '')
+      run: |
+        echo "✅ Docker images built successfully"
+        echo "ℹ️  Docker Hub credentials not configured - skipping push"
+        echo "   To enable pushing: Set DOCKER_USERNAME and DOCKER_PASSWORD secrets in repository settings"
