--- a/api-gateway-service/build.gradle
+++ b/api-gateway-service/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'java'
 }
 
+bootBuildImage {
+    imageName = "routeforge/api-gateway-service:latest"
+}
+
 dependencies {
     // Internal modules
     implementation project(':routeforge-common')
