Fix Docker image naming to use dynamic username

--- a/ingestion-service/build.gradle
+++ b/ingestion-service/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 bootBuildImage {
-    imageName = "routeforge/ingestion-service:latest"
+    imageName = "${System.getenv('DOCKER_USERNAME') ?: 'routeforge'}/ingestion-service:latest"
 }
 
 dependencies {
