--- a/processing-service/build.gradle
+++ b/processing-service/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 bootBuildImage {
-    imageName = "routeforge/processing-service:latest"
+    imageName = "${System.getenv('DOCKER_USERNAME') ?: 'routeforge'}/processing-service:latest"
 }
 
 dependencies {
