--- a/api-gateway-service/build.gradle
+++ b/api-gateway-service/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 bootBuildImage {
-    imageName = "routeforge/api-gateway-service:latest"
+    imageName = "${System.getenv('DOCKER_USERNAME') ?: 'routeforge'}/api-gateway-service:latest"
 }
 
 dependencies {
